# wgpu-camera

./: .gitignore  Cargo.toml  README.md  android_debug.sh  android_release.sh  build.rs  ios_debug.sh
Android/: build.gradle  settings.gradle
Android/app/: build.gradle
Android/app/src/androidTest/java/name/jinleili/gpuimage4/: ExampleInstrumentedTest.kt
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: CMakeLists.txt  Camera.h  main.cpp
Android/app/src/main/java/name/jinleili/gpuimage4/: CameraX.kt  MainActivity.kt  RustBridge.kt  WGPUApplication.kt  WGPUSurfaceView.kt
Android/app/src/main/java/name/jinleili/wgpu_camera/: CameraX.kt  MainActivity.kt  RustBridge.kt  WGPUApplication.kt  WGPUSurfaceView.kt
Android/app/src/main/res/values/: strings.xml  themes.xml
Android/app/src/test/java/name/jinleili/gpuimage4/: ExampleUnitTest.kt
Android/gradle/wrapper/: gradle-wrapper.properties
MyApplication/app/: build.gradle
MyApplication/app/src/main/cpp/: CMakeLists.txt
MyApplication/gradle/wrapper/: gradle-wrapper.properties
gpu-image4/: Cargo.toml  build.rs
gpu-image4/examples/: gpu-image4.rs
gpu-image4/src/: camera_input.rs  compute_filter_node.rs  display_node.rs  fragment_filter_node.rs  lib.rs  render_node.rs  shader_manager.rs  wgpu_canvas.rs
gpu-image4/src/ffi/: ios.rs  mod.rs
gpu-image4/src/ffi/android/: a_hardware_buffer.rs  camera_manager.rs  mod.rs  session_output.rs  util.rs  wgpu_kms.rs
iOS/GPUImage4/: AppDelegate.swift  FilterCVCell.swift  GPUImage4-Bridging-Header.h  MetalView.swift  SceneDelegate.swift  ViewController+FilterSelection.swift  ViewController.swift  libgpu_image4.h
iOS/GPUImage4.xcodeproj/: project.pbxproj
iOS/GPUImage4.xcodeproj/project.xcworkspace/xcuserdata/lijinlei.xcuserdatad/: UserInterfaceState.xcuserstate
iOS/GPUImage4.xcodeproj/xcshareddata/xcschemes/: GPUImage4.xcscheme
iOS/GPUImage4.xcodeproj/xcuserdata/lijinlei.xcuserdatad/xcschemes/: xcschememanagement.plist
iOS/GPUImage4/Base.lproj/: Main.storyboard
iOS/GPUImage4/camera/: CameraCaptureDevice.swift  CameraSession.swift  CameraSessionTypes.swift
iOS/WGPUCamera/: AppDelegate.swift  FilterCVCell.swift  SceneDelegate.swift  ViewController+FilterSelection.swift  ViewController.swift  WGPUCamera-Bridging-Header.h  libwgpu-camera.h
iOS/WGPUCamera.xcodeproj/: project.pbxproj
iOS/WGPUCamera.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
iOS/WGPUCamera.xcodeproj/project.xcworkspace/xcuserdata/lijinlei.xcuserdatad/: UserInterfaceState.xcuserstate
iOS/WGPUCamera.xcodeproj/xcshareddata/xcschemes/: WGPUCamera.xcscheme
iOS/WGPUCamera.xcodeproj/xcuserdata/lijinlei.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
iOS/WGPUCamera.xcodeproj/xcuserdata/lijinlei.xcuserdatad/xcschemes/: xcschememanagement.plist
iOS/WGPUCamera/Base.lproj/: Main.storyboard
iOS/WGPUCamera/camera/: CameraSession.swift  CameraSessionTypes.swift
run-wasm/: Cargo.toml
src/: camera_input.rs  ios.rs  lib.rs  main.rs  wgpu_canvas.rs
src/ffi/: android.rs  mod.rs
wgpu-camera/: Cargo.toml  build.rs
wgpu-camera/examples/: filter.rs
wgpu-camera/src/: compute_filter_node.rs  compute_node.rs  display_node.rs  fragment_filter_node.rs  lib.rs  page_turning.rs  wgpu_canvas.rs
wgpu-camera/src/ffi/: ios.rs  mod.rs
wgpu-camera/src/ffi/android/: camera_manager.rs  mod.rs  session_output.rs  util.rs  vk_image.rs
wgsl/: ascii_art.wgsl  base.vs.wgsl  bufferless.wgsl  cross_hatching.wgsl  edge_detection.wgsl  gaussian_blur_x.wgsl  gaussian_blur_y.wgsl  original.wgsl
wgsl/common/: group0+vs.wgsl
wgsl/func/: edge_detection.wgsl
wgsl_preprocessed/: ascii_art.wgsl  cross_hatching.wgsl  edge_detection.wgsl  original.wgsl
wgsl_shader/: bufferless.wgsl
(+11 files in other folders)
