[workspace]
resolver = "2"
members = [
    "gpu-image4",
    "run-wasm"
]

[workspace.package]
edition = "2021"
rust-version = "1.64"
authors = ["jinleili"]

[workspace.dependencies]
wgpu = "0.14"
wgc = { package = "wgpu-core", version = "0.14" }
hal = { package = "wgpu-hal", version = "0.14" }
# wgpu = { path = "../forks/wgpu/wgpu" }
# wgc = { package = "wgpu-core", path = "../forks/wgpu/wgpu-core" }
# hal = { package = "wgpu-hal", path = "../forks/wgpu/wgpu-hal" }
# app-surface = { git = "https://github.com/jinleili/wgpu-on-app", tag = "0.1.2" }
app-surface = { path = "../idroid/wgpu-on-app/app-surface" }
idroid = { path = "../idroid/idroid" }
